--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ header nav.navbar {
   background-color: #ffffff;
   height: 100px;
   padding-bottom: 25px !important;
-  max-width: 1332px;
+  width: 1332px !important;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
