--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1249,3 +1249,32 @@ main {
         }
     }
 }
+
+/* big buttons, no circle */
+
+.flickity-prev-next-button {
+    width: 100px;
+    height: 100px;
+    background: transparent;
+    z-index: 350;
+    margin-top: 140px;
+    border: none;
+    &.next{
+        justify-self: start;
+        margin-left: $theme_width - 130px;
+    }
+  }
+  /* arrow color */
+  .flickity-prev-next-button .arrow {
+    fill: white;
+  }
+  .flickity-prev-next-button.no-svg {
+    color: white;
+  }
+  .flickity-prev-next-button:hover {
+    background: transparent;
+  }
+  /* hide disabled button */
+  .flickity-prev-next-button:disabled {
+    display: none;
+  }
