--- a/scss/main.scss
+++ b/scss/main.scss
@@ -92,7 +92,7 @@ header {
         .container-fluid{
             padding: 0px;
             @include screen_btw(0px, $theme_width){
-                padding: 0 30px;
+                padding: 0 20px;
             }
         }
         .logo-container {
@@ -110,7 +110,7 @@ header {
             }
         }
         button.navbar-toggler{
-            margin-right: 10px;
+            padding: 0;
             .navbar-toggler-icon{
                 background-image:url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12" fill="none"><path d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z" fill="black" fill-opacity="0.86"></path></svg>');
             }
@@ -226,6 +226,11 @@ header {
                 &:hover{
                     color: $primary_white;
                 }
+            }
+            &:hover{
+                border: 2px solid $primary_blue !important;
+                background-color: $primary_white !important;
+                color: $primary_blue !important;
             }
             span{
                 display: inline-block;
